added font Roboto medium

--- a/app/src/main/res/layout/dialog_one_button.xml
+++ b/app/src/main/res/layout/dialog_one_button.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_24dp"
         android:layout_marginTop="@dimen/margin_24dp"
+        android:fontFamily="sans-serif-medium"
         android:textColor="@color/mainBackground"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,6 +27,7 @@
         android:layout_marginStart="@dimen/margin_24dp"
         android:layout_marginTop="@dimen/margin_16dp"
         android:layout_marginEnd="@dimen/margin_24dp"
+        android:fontFamily="sans-serif"
         android:textColor="@color/accounts_dialog_gray"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,6 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/margin_8dp"
         android:background="?selectableItemBackground"
+        android:fontFamily="sans-serif-medium"
         android:padding="24dp"
         android:text="@string/understand"
         android:textColor="@color/withdraws_yellow"
