--- a/app/src/main/res/layout/fragment_auth_code.xml
+++ b/app/src/main/res/layout/fragment_auth_code.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
+        android:fontFamily="sans-serif-medium"
         android:gravity="center"
         android:text="@string/input_code"
         android:textColor="@color/gray_intro_text"
@@ -120,6 +121,7 @@
         android:layout_marginEnd="0dp"
         android:layout_marginBottom="30dp"
         android:background="@drawable/bg_intro_btn"
+        android:fontFamily="sans-serif-medium"
         android:text="@string/login_btn"
         android:textAllCaps="false"
         android:textColor="@color/continue_color"
