--- a/app/src/main/res/layout/fragment_balance.xml
+++ b/app/src/main/res/layout/fragment_balance.xml
@@ -22,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:fontFamily="sans-serif-medium"
         android:text="@string/balance"
         android:textColor="@color/gray_intro_text"
         android:textSize="20sp"
@@ -43,6 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="74dp"
+        android:fontFamily="sans-serif-medium"
         android:textColor="@color/gray_intro_text"
         android:textSize="52sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,6 +57,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
+        android:fontFamily="sans-serif"
         android:text="@string/all_partners_sum"
         android:textColor="@color/gray_profile"
         android:textSize="16sp"
@@ -88,6 +91,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_16dp"
+        android:fontFamily="sans-serif-medium"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/yandex_title"
         app:layout_constraintStart_toEndOf="@+id/yandex_image"
@@ -100,6 +104,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_16dp"
+        android:fontFamily="sans-serif"
         android:text="@string/yandex_title"
         android:textColor="@color/gray_profile"
         android:textSize="16sp"
@@ -113,6 +118,7 @@
         android:layout_marginTop="36dp"
         android:layout_marginEnd="@dimen/margin_16dp"
         android:background="@drawable/bg_registration_btn"
+        android:fontFamily="sans-serif"
         android:gravity="center"
         android:padding="8dp"
         android:text="@string/withdraw"
@@ -137,6 +143,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_16dp"
+        android:fontFamily="sans-serif-medium"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/citymobil_title"
         app:layout_constraintStart_toEndOf="@+id/citymobil_image"
@@ -149,6 +156,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_16dp"
+        android:fontFamily="sans-serif"
         android:text="@string/citymobil_title"
         android:textColor="@color/gray_profile"
         android:textSize="16sp"
@@ -162,6 +170,7 @@
         android:layout_marginTop="26dp"
         android:layout_marginEnd="@dimen/margin_16dp"
         android:background="@drawable/bg_registration_btn"
+        android:fontFamily="sans-serif"
         android:gravity="center"
         android:padding="8dp"
         android:text="@string/withdraw"
@@ -186,6 +195,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_16dp"
+        android:fontFamily="sans-serif-medium"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/gett_title"
         app:layout_constraintStart_toEndOf="@+id/gett_image"
@@ -198,6 +208,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_16dp"
+        android:fontFamily="sans-serif"
         android:text="@string/gett_title"
         android:textColor="@color/gray_profile"
         android:textSize="16sp"
@@ -211,6 +222,7 @@
         android:layout_marginTop="26dp"
         android:layout_marginEnd="@dimen/margin_16dp"
         android:background="@drawable/bg_registration_btn"
+        android:fontFamily="sans-serif"
         android:gravity="center"
         android:padding="8dp"
         android:text="@string/withdraw"
@@ -226,6 +238,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
         android:layout_marginTop="62dp"
+        android:fontFamily="sans-serif-medium"
         android:text="@string/fuel_title"
         android:textColor="@color/balance_fuel_gray"
         android:textSize="20sp"
@@ -247,6 +260,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_16dp"
+        android:fontFamily="sans-serif-medium"
         android:text="1000 ₽"
         android:textColor="@color/balance_green"
         android:textSize="18sp"
@@ -259,6 +273,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_16dp"
+        android:fontFamily="sans-serif"
         android:text="@string/gazprom_title"
         android:textColor="@color/gray_profile"
         android:textSize="16sp"
@@ -271,6 +286,7 @@
         android:layout_height="44dp"
         android:layout_marginEnd="@dimen/margin_16dp"
         android:background="@drawable/bg_registration_btn"
+        android:fontFamily="sans-serif"
         android:gravity="center"
         android:padding="8dp"
         android:text="@string/replenish"
