--- a/app/src/main/res/layout/fragment_fuel_replenish.xml
+++ b/app/src/main/res/layout/fragment_fuel_replenish.xml
@@ -22,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:fontFamily="sans-serif-medium"
         android:text="@string/balance"
         android:textColor="@color/gray_intro_text"
         android:textSize="20sp"
@@ -66,6 +67,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_16dp"
+        android:fontFamily="sans-serif-medium"
         android:text="1000 ₽"
         android:textColor="@color/balance_green"
         android:textSize="18sp"
@@ -78,6 +80,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_16dp"
+        android:fontFamily="sans-serif"
         android:text="@string/gazprom_title"
         android:textColor="@color/gray_profile"
         android:textSize="16sp"
@@ -113,6 +116,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_24dp"
         android:layout_marginTop="26dp"
+        android:fontFamily="sans-serif"
         android:text="@string/choose_aggregator"
         android:textColor="@color/gray_intro_text"
         android:textSize="14sp"
@@ -140,6 +144,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_24dp"
         android:layout_marginTop="@dimen/margin_32dp"
+        android:fontFamily="sans-serif"
         android:text="@string/enter_charge_amount"
         android:textColor="@color/gray_intro_text"
         android:textSize="14sp"
@@ -182,6 +187,7 @@
         android:layout_marginEnd="@dimen/margin_24dp"
         android:layout_marginBottom="@dimen/margin_48dp"
         android:background="@drawable/bg_intro_btn"
+        android:fontFamily="sans-serif-medium"
         android:text="@string/replenish"
         android:textAllCaps="false"
         android:textColor="@color/continue_color"
