--- a/app/src/main/res/layout/fragment_intro.xml
+++ b/app/src/main/res/layout/fragment_intro.xml
@@ -27,6 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="28dp"
+            android:fontFamily="sans-serif-medium"
             android:text="@string/app_name"
             android:textAlignment="center"
             android:textColor="@android:color/white"
@@ -40,6 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_16dp"
             android:layout_marginBottom="102dp"
+            android:fontFamily="sans-serif"
             android:text="@string/intro_message"
             android:textAlignment="center"
             android:textColor="@color/gray_intro_text"
@@ -56,6 +58,7 @@
             android:layout_marginEnd="@dimen/margin_24dp"
             android:layout_marginBottom="@dimen/margin_24dp"
             android:background="@drawable/bg_intro_btn"
+            android:fontFamily="sans-serif-medium"
             android:text="@string/login_btn"
             android:textAllCaps="false"
             android:textColor="@color/continue_color"
@@ -72,6 +75,7 @@
             android:layout_marginEnd="@dimen/margin_24dp"
             android:layout_marginBottom="46dp"
             android:background="@drawable/bg_registration_btn"
+            android:fontFamily="sans-serif-medium"
             android:text="@string/registration"
             android:textAllCaps="false"
             android:textColor="@color/white_code_text"
