--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/login_background"
     android:fillViewport="true">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -45,6 +46,7 @@
             android:id="@+id/number_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-medium"
             android:textColor="@color/gray_profile"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -57,6 +59,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_16dp"
+            android:fontFamily="sans-serif-medium"
             android:textColor="@color/gray_intro_text"
             android:textSize="48sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -72,6 +75,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="@dimen/margin_16dp"
             android:background="@drawable/bg_profile_gradient"
+            android:fontFamily="sans-serif-medium"
             android:paddingStart="20dp"
             android:paddingTop="24dp"
             android:text="@string/balance"
@@ -89,6 +93,7 @@
             android:layout_marginTop="12dp"
             android:layout_marginEnd="@dimen/margin_16dp"
             android:background="@drawable/bg_profile_gradient"
+            android:fontFamily="sans-serif-medium"
             android:paddingStart="20dp"
             android:paddingTop="24dp"
             android:text="@string/orders"
@@ -106,6 +111,7 @@
             android:layout_marginTop="12dp"
             android:layout_marginEnd="@dimen/margin_16dp"
             android:background="@drawable/bg_profile_gradient"
+            android:fontFamily="sans-serif-medium"
             android:paddingStart="20dp"
             android:paddingTop="24dp"
             android:text="@string/withdrawal_applications"
@@ -123,6 +129,7 @@
             android:layout_marginTop="12dp"
             android:layout_marginEnd="@dimen/margin_16dp"
             android:background="@drawable/bg_profile_gradient"
+            android:fontFamily="sans-serif-medium"
             android:paddingStart="20dp"
             android:paddingTop="24dp"
             android:text="@string/accounts_and_cards"
@@ -140,6 +147,7 @@
             android:layout_marginTop="12dp"
             android:layout_marginEnd="@dimen/margin_16dp"
             android:background="@drawable/bg_profile_gradient"
+            android:fontFamily="sans-serif-medium"
             android:paddingStart="20dp"
             android:paddingTop="24dp"
             android:text="@string/support_service"
@@ -157,6 +165,7 @@
             android:layout_marginBottom="@dimen/margin_24dp"
             android:drawableStart="@drawable/ic_logout"
             android:drawablePadding="16dp"
+            android:fontFamily="sans-serif-medium"
             android:text="@string/exit"
             android:textColor="@color/gray_profile"
             android:textSize="20sp"
