--- a/app/src/main/res/layout/fragment_registration_selection.xml
+++ b/app/src/main/res/layout/fragment_registration_selection.xml
@@ -26,6 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
+            android:fontFamily="sans-serif-medium"
             android:text="@string/registration"
             android:textColor="@color/gray_profile"
             android:textSize="16sp"
@@ -74,6 +75,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
+            android:fontFamily="sans-serif"
             android:text="@string/yandex_title"
             android:textColor="@color/registration_white_color"
             android:textSize="16sp"
@@ -119,6 +121,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
+            android:fontFamily="sans-serif"
             android:text="@string/gett_title"
             android:textColor="@color/registration_white_color"
             android:textSize="16sp"
@@ -164,6 +167,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
+            android:fontFamily="sans-serif"
             android:text="@string/citymobil_title"
             android:textColor="@color/registration_white_color"
             android:textSize="16sp"
