--- a/app/src/main/res/layout/fragment_success.xml
+++ b/app/src/main/res/layout/fragment_success.xml
@@ -29,6 +29,7 @@
         android:id="@+id/success_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-medium"
         android:gravity="center"
         android:text="@string/thanks_title"
         android:textColor="@color/gray_intro_text"
@@ -46,6 +47,7 @@
         android:layout_marginStart="48dp"
         android:layout_marginTop="2dp"
         android:layout_marginEnd="48dp"
+        android:fontFamily="sans-serif"
         android:gravity="center"
         android:text="@string/success_message"
         android:textColor="@color/gray_application_text"
@@ -62,6 +64,7 @@
         android:layout_marginEnd="@dimen/margin_24dp"
         android:layout_marginBottom="@dimen/margin_24dp"
         android:background="@drawable/bg_intro_btn"
+        android:fontFamily="sans-serif-medium"
         android:text="@string/back_to_main_screen"
         android:textAllCaps="false"
         android:textColor="@color/continue_color"
@@ -78,6 +81,7 @@
         android:layout_marginEnd="@dimen/margin_24dp"
         android:layout_marginBottom="@dimen/margin_48dp"
         android:background="@drawable/bg_registration_btn"
+        android:fontFamily="sans-serif-medium"
         android:text="@string/back"
         android:textAllCaps="false"
         android:textColor="@color/white_code_text"
