--- a/app/src/main/res/layout/fragment_support.xml
+++ b/app/src/main/res/layout/fragment_support.xml
@@ -21,6 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:fontFamily="sans-serif-medium"
         android:text="@string/support_service"
         android:textColor="@color/gray_intro_text"
         android:textSize="20sp"
@@ -45,6 +46,7 @@
         android:layout_marginTop="36dp"
         android:layout_marginEnd="@dimen/margin_16dp"
         android:background="@drawable/bg_profile_gradient"
+        android:fontFamily="sans-serif-medium"
         android:paddingStart="20dp"
         android:paddingTop="24dp"
         android:text="@string/write_to_us"
@@ -62,6 +64,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="@dimen/margin_16dp"
         android:background="@drawable/bg_profile_gradient"
+        android:fontFamily="sans-serif-medium"
         android:paddingStart="20dp"
         android:paddingTop="24dp"
         android:text="@string/call_history"
@@ -79,6 +82,7 @@
         android:layout_marginEnd="@dimen/margin_24dp"
         android:layout_marginBottom="@dimen/margin_48dp"
         android:background="@drawable/bg_intro_btn"
+        android:fontFamily="sans-serif-medium"
         android:text="@string/to_call"
         android:textAllCaps="false"
         android:textColor="@color/continue_color"
