--- a/app/src/main/res/layout/fragment_withdraw.xml
+++ b/app/src/main/res/layout/fragment_withdraw.xml
@@ -22,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:fontFamily="sans-serif-medium"
         android:text="@string/withdraw_title"
         android:textColor="@color/gray_intro_text"
         android:textSize="20sp"
@@ -68,6 +69,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/margin_24dp"
+        android:fontFamily="sans-serif"
         android:textColor="@color/withdraws_gray"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/circle_image"
@@ -105,6 +107,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_24dp"
         android:layout_marginTop="14dp"
+        android:fontFamily="sans-serif"
         android:text="ПАО “Сбербанк”"
         android:textColor="@color/withdraws_gray"
         android:textSize="16sp"
@@ -129,6 +132,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_24dp"
         android:layout_marginTop="8dp"
+        android:fontFamily="sans-serif"
         android:text="Поликин Г. И"
         android:textColor="@color/gray_profile"
         android:textSize="13sp"
@@ -210,6 +214,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_24dp"
         android:layout_marginEnd="44dp"
+        android:fontFamily="sans-serif-medium"
         android:textColor="@color/withdraws_yellow"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -236,6 +241,7 @@
         android:layout_marginEnd="@dimen/margin_24dp"
         android:layout_marginBottom="48dp"
         android:background="@drawable/bg_registration_btn"
+        android:fontFamily="sans-serif-medium"
         android:text="@string/back"
         android:textAllCaps="false"
         android:textColor="@color/white_code_text"
