--- a/app/src/main/res/layout/fragment_withdraw_create.xml
+++ b/app/src/main/res/layout/fragment_withdraw_create.xml
@@ -29,6 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
+            android:fontFamily="sans-serif-medium"
             android:text="@string/withdraw_create_title"
             android:textColor="@color/gray_intro_text"
             android:textSize="20sp"
@@ -288,6 +289,7 @@
             android:layout_height="56dp"
             android:layout_margin="@dimen/margin_24dp"
             android:background="@drawable/bg_intro_btn"
+            android:fontFamily="sans-serif-medium"
             android:text="@string/send_request"
             android:textAllCaps="false"
             android:textColor="@color/continue_color"
