--- a/app/src/main/res/layout/dialog_two_buttons.xml
+++ b/app/src/main/res/layout/dialog_two_buttons.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_24dp"
         android:layout_marginTop="@dimen/margin_24dp"
+        android:fontFamily="sans-serif-medium"
         android:textColor="@color/mainBackground"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,6 +27,7 @@
         android:layout_marginStart="@dimen/margin_24dp"
         android:layout_marginTop="@dimen/margin_16dp"
         android:layout_marginEnd="@dimen/margin_24dp"
+        android:fontFamily="sans-serif"
         android:textColor="@color/accounts_dialog_gray"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,6 +42,7 @@
         android:layout_marginEnd="14dp"
         android:layout_marginBottom="@dimen/margin_8dp"
         android:background="?selectableItemBackground"
+        android:fontFamily="sans-serif-medium"
         android:padding="24dp"
         android:textColor="@color/gray_profile"
         android:textSize="14sp"
@@ -55,6 +58,7 @@
         android:layout_marginEnd="@dimen/margin_8dp"
         android:layout_marginBottom="@dimen/margin_8dp"
         android:background="?selectableItemBackground"
+        android:fontFamily="sans-serif-medium"
         android:padding="24dp"
         android:textColor="@color/withdraws_yellow"
         android:textSize="14sp"
