--- a/app/src/main/res/layout/empty_withdraws_screen.xml
+++ b/app/src/main/res/layout/empty_withdraws_screen.xml
@@ -41,6 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_64dp"
+        android:fontFamily="sans-serif-medium"
         android:text="@string/no_withdrawal_requests"
         android:textColor="@color/gray_intro_text"
         android:textSize="20sp"
@@ -52,6 +53,7 @@
         android:layout_width="355dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
+        android:fontFamily="sans-serif"
         android:gravity="center"
         android:text="@string/no_withdrawal_message"
         android:textColor="@color/gray_profile"
@@ -68,6 +70,7 @@
         android:layout_marginEnd="@dimen/margin_24dp"
         android:layout_marginBottom="@dimen/margin_24dp"
         android:background="@drawable/bg_intro_btn"
+        android:fontFamily="sans-serif-medium"
         android:text="@string/connect_account"
         android:textAllCaps="false"
         android:textColor="@color/continue_color"
@@ -84,6 +87,7 @@
         android:layout_marginEnd="@dimen/margin_24dp"
         android:layout_marginBottom="@dimen/margin_48dp"
         android:background="@drawable/bg_registration_btn"
+        android:fontFamily="sans-serif-medium"
         android:text="@string/back"
         android:textAllCaps="false"
         android:textColor="@color/white_code_text"
