--- a/app/src/main/res/layout/fragment_accounts.xml
+++ b/app/src/main/res/layout/fragment_accounts.xml
@@ -27,6 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
+            android:fontFamily="sans-serif-medium"
             android:text="@string/accounts_title"
             android:textColor="@color/balance_fuel_gray"
             android:textSize="20sp"
@@ -83,6 +84,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_24dp"
+                android:fontFamily="sans-serif"
                 android:text="@string/add_account"
                 android:textColor="@color/withdraws_yellow"
                 android:textSize="20sp"
@@ -129,6 +131,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_24dp"
                 android:layout_marginTop="22dp"
+                android:fontFamily="sans-serif"
                 android:text="@string/add_account"
                 android:textColor="@color/withdraws_yellow"
                 android:textSize="20sp"
@@ -383,6 +386,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_24dp"
+                android:fontFamily="sans-serif"
                 android:text="@string/add_card"
                 android:textColor="@color/withdraws_yellow"
                 android:textSize="20sp"
@@ -429,6 +433,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_24dp"
                 android:layout_marginTop="22dp"
+                android:fontFamily="sans-serif"
                 android:text="@string/add_card"
                 android:textColor="@color/withdraws_yellow"
                 android:textSize="20sp"
@@ -488,6 +493,7 @@
                 android:layout_height="56dp"
                 android:layout_margin="@dimen/margin_24dp"
                 android:background="@drawable/bg_intro_btn"
+                android:fontFamily="sans-serif-medium"
                 android:text="@string/add_button_text"
                 android:textAllCaps="false"
                 android:textColor="@color/continue_color"
