--- a/app/src/main/res/layout/fragment_connection.xml
+++ b/app/src/main/res/layout/fragment_connection.xml
@@ -27,6 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:text="@string/connection"
+            android:fontFamily="sans-serif-medium"
             android:textColor="@color/gray_profile"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@+id/back_arrow"
@@ -47,6 +48,7 @@
             android:id="@+id/taxi_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="sans-serif"
             android:layout_marginStart="20dp"
             android:text="@string/yandex_title"
             android:textColor="@color/registration_white_color"
