--- a/app/src/main/res/layout/fragment_orders.xml
+++ b/app/src/main/res/layout/fragment_orders.xml
@@ -22,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:fontFamily="sans-serif-medium"
         android:text="@string/orders"
         android:textColor="@color/gray_intro_text"
         android:textSize="20sp"
@@ -57,6 +58,7 @@
         android:gravity="center"
         android:text="@string/info_unavailable"
         android:textColor="@color/gray_profile"
+        android:fontFamily="sans-serif"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
