--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -39,6 +39,7 @@
             android:layout_width="298dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_4dp"
+            android:fontFamily="sans-serif"
             android:gravity="center"
             android:text="@string/select_registration_variant"
             android:textColor="@color/gray_profile"
@@ -53,6 +54,7 @@
             android:layout_height="56dp"
             android:layout_marginTop="78dp"
             android:background="@drawable/bg_intro_btn"
+            android:fontFamily="sans-serif-medium"
             android:text="@string/set_phone_number"
             android:textAllCaps="false"
             android:textColor="@color/continue_color"
@@ -66,6 +68,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_16dp"
+            android:fontFamily="sans-serif"
             android:text="@string/or"
             android:textColor="@color/agreement_text_color"
             android:textSize="13sp"
@@ -79,6 +82,7 @@
             android:layout_height="56dp"
             android:layout_marginTop="@dimen/margin_16dp"
             android:background="@drawable/bg_intro_btn"
+            android:fontFamily="sans-serif-medium"
             android:text="@string/download_documents"
             android:textAllCaps="false"
             android:textColor="@color/continue_color"
@@ -92,6 +96,7 @@
             android:layout_width="340dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="80dp"
+            android:fontFamily="sans-serif"
             android:gravity="center"
             android:text="@string/prepare_this_documents"
             android:textColor="@color/gray_intro_text"
@@ -104,6 +109,7 @@
             android:layout_width="340dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="18dp"
+            android:fontFamily="sans-serif"
             android:text="@string/documents_list"
             android:textColor="@color/gray_profile"
             android:textSize="16sp"
