--- a/app/src/main/res/layout/fragment_write_message.xml
+++ b/app/src/main/res/layout/fragment_write_message.xml
@@ -22,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:fontFamily="sans-serif-medium"
         android:text="@string/write_to_us"
         android:textColor="@color/gray_intro_text"
         android:textSize="20sp"
@@ -78,6 +79,7 @@
         android:layout_marginEnd="@dimen/margin_24dp"
         android:layout_marginBottom="@dimen/margin_48dp"
         android:background="@drawable/bg_intro_btn"
+        android:fontFamily="sans-serif-medium"
         android:text="@string/submit"
         android:textAllCaps="false"
         android:textColor="@color/continue_color"
