--- a/app/src/main/res/layout/item_taxi.xml
+++ b/app/src/main/res/layout/item_taxi.xml
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_16dp"
         android:layout_marginTop="12dp"
+        android:fontFamily="sans-serif-medium"
         android:textColor="@color/gray_intro_text"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/taxi_name"
