--- a/app/src/main/res/layout/item_taxi_orders.xml
+++ b/app/src/main/res/layout/item_taxi_orders.xml
@@ -24,6 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_16dp"
         android:layout_marginEnd="@dimen/margin_16dp"
+        android:fontFamily="sans-serif-medium"
         android:textColor="@color/gray_intro_text"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
