--- a/app/src/main/res/layout/item_withdraw.xml
+++ b/app/src/main/res/layout/item_withdraw.xml
@@ -47,6 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
+        android:fontFamily="sans-serif-medium"
         android:text="@string/yandex_title"
         android:textColor="@color/withdraws_gray"
         android:textSize="18sp"
