fixed checkbox, city icon, phone in profile

--- a/app/src/main/res/layout/fragment_auth_phone.xml
+++ b/app/src/main/res/layout/fragment_auth_phone.xml
@@ -85,9 +85,8 @@
             android:id="@+id/login_checkbox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:buttonTint="@color/checkbox_color"
+            android:button="@drawable/checkbox_selector"
             android:checked="true"
-            android:drawable="@drawable/checkbox_primary"
             android:fontFamily="sans-serif"
             android:paddingStart="8dp"
             android:paddingTop="22dp"
