--- a/app/src/main/res/layout/fragment_auth_code.xml
+++ b/app/src/main/res/layout/fragment_auth_code.xml
@@ -126,8 +126,138 @@
         android:textAllCaps="false"
         android:textColor="@color/continue_color"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/keyboard"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/keyboard"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_8dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/num_1"
+                style="@style/KeyboardButtonStyle"
+                android:text="1"
+                android:textColor="@color/registration_white_color"
+                tools:ignore="HardcodedText" />
+
+            <Button
+                android:id="@+id/num_2"
+                style="@style/KeyboardButtonStyle"
+                android:text="2"
+                android:textColor="@color/registration_white_color"
+                tools:ignore="HardcodedText" />
+
+            <Button
+                android:id="@+id/num_3"
+                style="@style/KeyboardButtonStyle"
+                android:text="3"
+                android:textColor="@color/registration_white_color"
+                tools:ignore="HardcodedText" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/num_4"
+                style="@style/KeyboardButtonStyle"
+                android:text="4"
+                android:textColor="@color/registration_white_color"
+                tools:ignore="HardcodedText" />
+
+            <Button
+                android:id="@+id/num_5"
+                style="@style/KeyboardButtonStyle"
+                android:text="5"
+                android:textColor="@color/registration_white_color"
+                tools:ignore="HardcodedText" />
+
+            <Button
+                android:id="@+id/num_6"
+                style="@style/KeyboardButtonStyle"
+                android:text="6"
+                android:textColor="@color/registration_white_color"
+                tools:ignore="HardcodedText" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/num_7"
+                style="@style/KeyboardButtonStyle"
+                android:text="7"
+                android:textColor="@color/registration_white_color"
+                tools:ignore="HardcodedText" />
+
+            <Button
+                android:id="@+id/num_8"
+                style="@style/KeyboardButtonStyle"
+                android:text="8"
+                android:textColor="@color/registration_white_color"
+                tools:ignore="HardcodedText" />
+
+            <Button
+                android:id="@+id/num_9"
+                style="@style/KeyboardButtonStyle"
+                android:text="9"
+                android:textColor="@color/registration_white_color"
+                tools:ignore="HardcodedText" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/erase_btn"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/bg_keyboard_button"
+                android:scaleType="center"
+                android:textColor="@color/registration_white_color"
+                app:srcCompat="@drawable/ic_erase" />
+
+            <Button
+                android:id="@+id/num_0"
+                style="@style/KeyboardButtonStyle"
+                android:text="0"
+                android:textColor="@color/registration_white_color"
+                tools:ignore="HardcodedText" />
+
+            <ImageView
+                android:id="@+id/apply_btn"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/bg_keyboard_button"
+                android:scaleType="center"
+                android:textColor="@color/registration_white_color"
+                app:srcCompat="@drawable/ic_enter" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
