added viewPager logic

--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -98,6 +98,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
+        android:maxLength="30"
         android:textColor="@color/gray_profile"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@id/rectangle"
@@ -110,6 +111,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
+        android:maxLength="30"
         android:textColor="@color/gray_profile"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@id/polygon"
