--- a/app/src/main/res/layout/fragment_withdraw.xml
+++ b/app/src/main/res/layout/fragment_withdraw.xml
@@ -152,7 +152,7 @@
         android:id="@+id/withdrawal_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
+        android:layout_marginStart="@dimen/margin_48dp"
         android:layout_marginTop="@dimen/margin_24dp"
         android:text="@string/withdrawal_title"
         android:textColor="@color/withdraws_gray"
@@ -239,7 +239,7 @@
         android:layout_height="60dp"
         android:layout_marginStart="@dimen/margin_24dp"
         android:layout_marginEnd="@dimen/margin_24dp"
-        android:layout_marginBottom="48dp"
+        android:layout_marginBottom="@dimen/margin_48dp"
         android:background="@drawable/bg_registration_btn"
         android:fontFamily="sans-serif-medium"
         android:text="@string/back"
